--- a/mainapp/templates/mainapp/news.html
+++ b/mainapp/templates/mainapp/news.html
@@ -12,51 +12,20 @@
 <div class="row">
 
   <div class="col-lg-8">
+
+    {% for i in range  %}
     
     <div class="card my-2">
       <div class="card-body">
-        <h5 class="card-title">Новость</h5>
-        <h6 class="card-subtitle mb-2 text-muted">2021-04-29 20-50-26</h6>
+        <h5 class="card-title">Новость_{{ i }}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{ news_date|date:"d-m-Y h:i:s" }}</h6>
         <p class="card-text">Предварительное описание новости</p>
         <a href="#" class="card-link">Подробнее</a>
       </div>
     </div>
-    
-    <div class="card my-2">
-      <div class="card-body">
-        <h5 class="card-title">Новость</h5>
-        <h6 class="card-subtitle mb-2 text-muted">2021-04-28 20-50-26</h6>
-        <p class="card-text">Предварительное описание новости</p>
-        <a href="#" class="card-link">Подробнее</a>
-      </div>
-    </div>
-    
-    <div class="card my-2">
-      <div class="card-body">
-        <h5 class="card-title">Новость</h5>
-        <h6 class="card-subtitle mb-2 text-muted">2021-04-27 20-50-26</h6>
-        <p class="card-text">Предварительное описание новости</p>
-        <a href="#" class="card-link">Подробнее</a>
-      </div>
-    </div>
-    
-    <div class="card my-2">
-      <div class="card-body">
-        <h5 class="card-title">Новость</h5>
-        <h6 class="card-subtitle mb-2 text-muted">2021-04-26 20-50-26</h6>
-        <p class="card-text">Предварительное описание новости</p>
-        <a href="#" class="card-link">Подробнее</a>
-      </div>
-    </div>
-    
-    <div class="card mt-2">
-      <div class="card-body">
-        <h5 class="card-title">Новость</h5>
-        <h6 class="card-subtitle mb-2 text-muted">2021-04-25 20-50-26</h6>
-        <p class="card-text">Предварительное описание новости</p>
-        <a href="#" class="card-link">Подробнее</a>
-      </div>
-    </div>
+
+    {% endfor %}
+
     
   </div>
 
@@ -92,9 +61,9 @@
   <nav aria-label="Page navigation example">
     <ul class="pagination">
       <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
-      <li class="page-item"><a class="page-link" href="#">2</a></li>
-      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      {% for i in range %}
+      <li class="page-item"><a class="page-link" href="#">{{ i }}</a></li>
+      {% endfor %}
       <li class="page-item"><a class="page-link" href="#">Next</a></li>
     </ul>
   </nav>
