--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% load email_to_link %}
+
 {% block content %}
 
 
@@ -31,7 +33,7 @@
         </ul>
         <ul class="list-unstyled">
           <li>Email</li>
-          <li><strong>geeklab@spb.ru</strong></li>
+          <li><strong>{{ 'geeklab@spb.ru'|email_to_link }}</strong></li>
         </ul>
         <ul class="list-unstyled">
           <li>Адрес</li>
@@ -54,7 +56,7 @@
         </ul>
         <ul class="list-unstyled">
           <li>Email</li>
-          <li><strong>geeklab@kz.ru</strong></li>
+          <li><strong>{{ 'geeklab@kz.ru'|email_to_link }}</strong></li>
         </ul>
         <ul class="list-unstyled">
           <li>Адрес</li>
@@ -77,7 +79,7 @@
         </ul>
         <ul class="list-unstyled">
           <li>Email</li>
-          <li><strong>geeklab@msk.ru</strong></li>
+          <li><strong>{{ 'geeklab@msk.ru'|email_to_link }}</strong></li>
         </ul>
         <ul class="list-unstyled">
           <li>Адрес</li>
