--- a/mainapp/templates/mainapp/news.html
+++ b/mainapp/templates/mainapp/news.html
@@ -3,76 +3,72 @@
 {% block content %}
 
 
+<div class="container-md">
 
 
-    <div class="container-md">
+    <div class="row">
 
-        
+        <div class="col-lg-8">
 
-<div class="row">
+            {% for item in news_qs %}
+            <div class="card my-2">
+                <div class="card-body">
+                    <h5 class="card-title">{{ item.title }}</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">
+                        {{ item.created|date:"Y-m-d h-i-s" }}
+                    </h6>
+                    <p class="card-text">{{ item.description }}</p>
+                    <a href=#
+                       class="card-link">Подробнее</a>
+                </div>
+            </div>
+            {% endfor %}
 
-  <div class="col-lg-8">
 
-    {% for i in range  %}
-    
-    <div class="card my-2">
-      <div class="card-body">
-        <h5 class="card-title">Новость_{{ i }}</h5>
-        <h6 class="card-subtitle mb-2 text-muted">{{ news_date|date:"d-m-Y h:i:s" }}</h6>
-        <p class="card-text">Предварительное описание новости</p>
-        <a href="#" class="card-link">Подробнее</a>
-      </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="card my-2 sticky-top">
+                <div class="card-header">
+                    Фильтры
+                </div>
+                <div class="card-body">
+                    <form action="">
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1">Дата от...</span>
+                            </div>
+                            <input type="date" class="form-control" name="dateFrom">
+                        </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text" id="basic-addon1">Дата до...</span>
+                            </div>
+                            <input type="date" class="form-control" name="dateTo">
+                        </div>
+
+                        <button type="submit" class="btn btn-primary btn-block">Фильтровать</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
     </div>
 
-    {% endfor %}
-
-    
-  </div>
-
-  <div class="col-lg-4">
-    <div class="card my-2 sticky-top">
-      <div class="card-header">
-        Фильтры
-      </div>
-      <div class="card-body">
-        <form action="">
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon1">Дата от...</span>
-            </div>
-            <input type="date" class="form-control" name="dateFrom">
-          </div>
-          <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" id="basic-addon1">Дата до...</span>
-            </div>
-            <input type="date" class="form-control" name="dateTo">
-          </div>
-
-          <button type="submit" class="btn btn-primary btn-block">Фильтровать</button>
-        </form>
-      </div>
+    <div class="row justify-content-center align-items-center mt-3 mb-n3">
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                {% for i in range %}
+                <li class="page-item"><a class="page-link" href="#">{{ i }}</a></li>
+                {% endfor %}
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+        </nav>
     </div>
-  </div>
+
 
 </div>
-
-<div class="row justify-content-center align-items-center mt-3 mb-n3">
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-      {% for i in range %}
-      <li class="page-item"><a class="page-link" href="#">{{ i }}</a></li>
-      {% endfor %}
-      <li class="page-item"><a class="page-link" href="#">Next</a></li>
-    </ul>
-  </nav>
-</div>
-
-
-
-    </div>
-
 
 
 {% endblock %}
