--- a/templates/includes/main_menu.html
+++ b/templates/includes/main_menu.html
@@ -24,7 +24,7 @@
                             Профиль
                         </a>
                         <div class="dropdown-menu" aria-labelledby="ddProfile">
-                            <a class="dropdown-item" href="#">Редактировать профиль</a>
+                            <a class="dropdown-item" href="/authapp/profile_edit">Редактировать профиль</a>
                             <a class="dropdown-item" href="#">Мои курсы</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Модерация</a>
