[+] Добавление регистрации через GitHub

--- a/authapp/templates/registration/login.html
+++ b/authapp/templates/registration/login.html
@@ -63,8 +63,8 @@
         <div class="btn-group btn-block" role="group">
             <a class="btn btn-primary" href="#" role="button"><i
                     class="fab fa-vk"></i></a>
-            <a class="btn btn-primary" href="#" role="button"><i
-                    class="fab fa-github"></i></a>
+            <a class="btn btn-primary" href="{% url 'social:begin' 'github' %}"
+               role="button"><i class="fab fa-github"></i></a>
             <a class="btn btn-primary" href="#" role="button"><i
                     class="fab fa-facebook"></i></a>
         </div>
@@ -89,6 +89,7 @@
         $(".toast").toast("show");
         {% endif %}
     });
+
 </script>
 </body>
 </html>
