--- a/templates/includes/main_menu.html
+++ b/templates/includes/main_menu.html
@@ -28,7 +28,7 @@
                             <a class="dropdown-item" href="#">Мои курсы</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Модерация</a>
-                            <a class="dropdown-item" href="#">Административный раздел</a>
+                            <a class="dropdown-item" href="/admin">Административный раздел</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="#">Выход</a>
                         </div>
